Fix typo in workflow

--- a/.github/workflows/spawn.yaml
+++ b/.github/workflows/spawn.yaml
@@ -40,4 +40,4 @@ jobs:
   
       - name: Spawn instance
         run: |
-            .spawn.sh ${{ env.DATA }}
+            ./spawn.sh ${{ env.DATA }}
