--- a/.github/workflows/spawn.yaml
+++ b/.github/workflows/spawn.yaml
@@ -42,4 +42,4 @@ jobs:
   
       - name: Launch instance
         run: |
-            ./run.sh ${{ env.DATA }}
+            ./run.sh ${{ env.DATA }} $GITHUB_REF_NAME
